# sha256-zk-benchmark

./: .gitignore  Cargo.toml  readme.md
bench-types/: Cargo.toml
risc0-sha256/host/: Cargo.toml
risc0-sha256/host/src/: main.rs
risc0-sha256/methods/guest/: Cargo.toml
risc0-sha256/methods/guest/src/: main.rs
sp1-sha/program/: Cargo.toml
sp1-sha/program/elf/: riscv32im-succinct-zkvm-elf
sp1-sha/program/src/: main.rs
sp1-sha/script/: Cargo.toml
sp1-sha/script/src/: main.rs
sp1-sha/sp1-types/: Cargo.toml
sp1-sha/sp1-types/src/: lib.rs
