[workspace]
[package]
version = "0.1.0"
name = "sp1-sha-program"
edition = "2021"

[dependencies]
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git" }
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-v0.10.8" }
serde = {version="1", features=["derive"]}
bincode = "1.3"